# p3dfft

./: .gitignore  AUTHORS  COPYING  COPYRIGHT  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  compile  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  index.html  ltmain.sh  params.json
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
extra/: configure.py  gentest.py  makejob.py
extra/comet/: comet_configure-mt.py  comet_configure.py  comet_permutative-mt.py  comet_permutative.py
extra/cori/: cori_configure-mt.py  cori_configure.py  cori_permutative-mt.py  cori_permutative.py
extra/edison/: edison_configure-mt.py  edison_configure.py  edison_permutative-mt.py  edison_permutative.py
extra/gordon/: gordon_configure-mt.py  gordon_configure.py  gordon_permutative-mt.py  gordon_permutative.py
extra/m1samuel/: configure.py  runtests.py
extra/mira/: mira_configure-mt.py  mira_configure.py  mira_permutative-mt.py  mira_permutative.py
extra/stampede/: stampede_configure-mt.py  stampede_configure.py  stampede_permutative-mt.py  stampede_permutative.py
include/: config.h  gnu.h  p3dfft.h  p3dfft.h.original
lib/.svn/: all-wcprops  entries
p3dfft-devel/: COPYRIGHT  Makefile.am  config.status  configure
p3dfft-devel/autom4te.cache/: output.1  requests
p3dfft-devel/include/: gnu.h  p3dfft.h
p3dfft-devel/sample/: Makefile.am  Makefile.in
p3dfft-devel/sample/C/: Makefile.am  driver_sine_inplace.c
p3dfft-devel/sample/FORTRAN/: Makefile.in  driver_cheby.F90  driver_inverse.F90  driver_rand.F90  driver_rand_many.F90  driver_spec.F90
sample/: Makefile.am  Makefile.in  stdin
sample/C/: Makefile  Makefile.am  Makefile.in  driver_inverse.c  driver_noop.c  driver_rand.c  driver_rand_many.c  driver_sine.c  driver_sine_inplace.c  driver_sine_inplace_many.c  driver_sine_many.c  driver_spec.c
sample/FORTRAN/: Makefile  Makefile.am  Makefile.in  Makefile~  driver_cheby.F90  driver_cheby.f90  driver_inverse.F90  driver_inverse.f90  driver_noop.F90  driver_rand.F90  driver_rand.f90  driver_rand_many.F90  driver_sine.F90  driver_sine.f90  driver_sine_inplace.F90  driver_sine_inplace.f90  driver_sine_inplace_many.F90  driver_sine_many.F90  driver_sine_pruned.F90  driver_spec.F90  driver_spec.f90
